# dosa_project

./: README.md
contracts/: Dosa2Coin.sol  Dosa2MintBurn.sol  Dosa2NFT.sol  ERC721.sol  ERC721Burnable.sol  IERC721.sol
contracts/abi/: DOSA2MintBurn-abi.json  DOSA2NFT-abi.json
dosa_fluence_socket_io/: index.ts  package-lock.json  package.json
dosa_fluence_socket_io/aqua/: game_oracle.aqua
dosa_game_oracle/: .env  .gitignore  deploy_service.sh  index.ts  package-lock.json  package.json  run_game.sh
dosa_game_oracle/aqua/: dosa_game_service.aqua  game_oracle.aqua  i_dosa_game_service.aqua
dosa_game_oracle/src/: main.ts
dosa_log/: .env  package-lock.json  package.json
dosa_log/aqua/: i-dosa-log.aqua
dosa_log/src/: main.ts
dosa_mint_oracle/: .env  package.json  run_listen.sh
dosa_mint_oracle/aqua/: i-dosa-metadata.aqua  mint-oracle.aqua
dosa_mint_oracle/src/: main.ts
dosa_minting_service/: .repl_history  Config.toml
dosa_minting_service/artifacts/: curl_adapter.wasm  mint_indexer.wasm
dosa_minting_service/mint_indexer/: Cargo.toml
dosa_minting_service/mint_indexer/src/: main.rs
dosa_minting_service/scripts/: build.sh
dosa_subgraph/dosasubgraph/: networks.json  package-lock.json  package.json  subgraph.yaml
dosa_workshop/: README.md  package-lock.json  package.json  vue.config.js
dosa_workshop/src/: App.vue  main.js
game/: .env  package-lock.json  package.json  tsconfig.json
game/aqua/: game_oracle.aqua
game/src/: App.tsx  PhaserGame.ts  index.tsx  (+1 more)
game_client_asteroid/: .env  package-lock.json  package.json  tsconfig.json
(+59 files in other folders)
