[package]
name = "mint_indexer"
version = "0.1.0"
edition = "2021"
authors = ["Dosa Lab"]
desription = "Indexing mint address"

[[bin]]
name = "mint_indexer"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "=0.6.10", features = ["logger"] }
log = "0.4.8"
fstrings = "0.2.3"
serde = "1.0.118"
serde_json = "1.0.82"
bs58 = "0.4.0"
